--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/vahushty/biblethumb#readme",
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.0",
+    "reqeust": "^2.81.1"
   },
   "devDependencies": {
     "prisma": "^4.9.0"
